# radarr-mvp

./: .codacy.yml  .dockerignore  .editorconfig  .env.build  .env.docker  .env.example  .env.production.example  .env.server.example  .env.test  .env.test.example  .gitignore  .gitleaks.toml  .plan  .pre-commit-config.yaml  01-plan.md.bak.20250821  API.md  API_STATUS.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  Cargo-legacy.toml  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  DOCKER.md  DOCKER_DEPLOYMENT.md  DOCKER_MODERNIZATION_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.security  IMPORT_IMPLEMENTATION.md  INSTALL.md  KUBERNETES-MODERNIZATION-REPORT.md  LIST_SYNC_COMPLETION_SUMMARY.md  LOCAL_FIRST_MIGRATION.md  MIGRATION.md  PERFORMANCE_BENCHMARKING_REPORT.md  PROGRESS.md  QUEUE_IMPLEMENTATION_SUMMARY.md  (+48 more)
.agents/: assignment_matrix.json  registry.json
.architecture/: 04-deployment.md  05-security.md  06-performance.md  08-api-design.md  README.md
.claude/: config.json
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.github/: SECRETS_SETUP.md  dependabot.yml  pull_request_template.md
.sqlx/: query-0b6627885af8a4dd3f717ee6bd26f202fa517da1fee0b728ae7c222446631b3e.json  query-153a5115e26ee743551e0804b84bf71a3ee5be2ec05f64cbfce757733757b175.json  query-15b609d45a24ed045ebce8bb7396ca0e4862cd4e6f732b6507998205f68c616d.json  query-1a0b0a683b69d4ff66df5ca5eab7310a615c1e858bcd69e012a3248cef0ba4b6.json  query-2616854bc5871189deec9bf063187ed2bbbfc2ce1c3acd87bc919f1f26eb00f5.json  query-347d366fc9125f84f0351ce48124f07cdfc68e976b70b5722bc0d2fcccdc3882.json  query-42bbcf2890a20ccaddb07e775070073d9620fd37e5b4204795347c1aacee9aee.json  query-4720be507a5055377dfea79d6aa515027496c7b4dc9a890e9ea5ed6eecbb5fde.json  query-6033be2edac3ec14981a1a08f27ef9ea961f7a75e4ad22e0882d9a2adc1fbd64.json  query-6ad36d48714dbd0da199d117563bb9c22738cd2b8938705b9da363a2b60a59bb.json  query-6b1c0327afd02aedbb3982c924e893272d9814ed102d9e0d8bf6bcd0230bad9b.json  query-754eb895465341d02e53d3832e240f3ae1cad18410b97db272d5fef13541b5f2.json  query-8159f4b055f8643d6ed266f3803f2cfdf972780588d60c1437baf9d447700ad8.json  query-8ed42938c847414fb4bd1c4330c475fd41060069ea66a49e6eeb81dde2e34a81.json  query-c00e91d07e4338f07a4740af4a9b8ecd47647b388ba0ec844b0d8d9c6f6c3976.json  query-c516980f066981282712c7e5d076e37d9a513bfd446377c9eeedc25b5df6ea48.json  (+4 more)
config/: production.env.template  services.env.example  (+2 more)
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: hdbits.rs  hdbits_api_analyzer.rs  hdbits_browse_analyzer.rs  hdbits_comprehensive_analyzer.rs  hdbits_session_analyzer.rs  lib.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: error.rs  extractors.rs  lib.rs  metrics.rs  middleware.rs  models.rs  security.rs  simple_api.rs  telemetry.rs  tracing.rs  validation.rs
crates/api/src/handlers/: advanced_search.rs  calendar.rs  commands.rs  downloads.rs  health.rs  mod.rs  monitoring.rs  movies.rs  quality.rs  quality_profiles.rs  queue.rs  search.rs  simple_queue.rs  streaming.rs
crates/api/src/routes/: advanced_search.rs  downloads.rs  health.rs  mod.rs  monitoring.rs  movies.rs  queue.rs  search.rs  simple_queue.rs  streaming.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: circuit_breaker.rs  correlation.rs  error.rs  lib.rs  progress.rs  retry.rs  rss.rs  tracing.rs
crates/core/src/blocklist/: mod.rs  models.rs  repository.rs  service.rs  tests.rs
crates/core/src/domain/: mod.rs  repositories.rs  services.rs
crates/core/src/events/: mod.rs
crates/core/src/jobs/: enhanced_sync_handler.rs  enhanced_sync_handler_tests.rs  integration_simple.rs  list_sync.rs  mod.rs
crates/core/src/lists/: mod.rs  models.rs
crates/core/src/models/: download.rs  indexer.rs  mod.rs  movie.rs  quality.rs  queue.rs  release.rs
crates/core/src/notifications/: discord.rs  mod.rs  webhook.rs
crates/core/src/services/: mod.rs  queue_processor.rs  queue_service.rs  search_integration.rs
crates/core/src/streaming/: aggregator.rs  mod.rs  models.rs  traits.rs
crates/downloaders/: Cargo.toml  README.md
crates/downloaders/examples/: qbittorrent_example.rs
crates/downloaders/src/: lib.rs  qbittorrent.rs  tests.rs
crates/import/: Cargo.toml  README.md
crates/import/examples/: basic_import.rs
crates/import/src/: file_analyzer.rs  file_scanner.rs  hardlink_manager.rs  integration.rs  lib.rs  pipeline.rs  rename_engine.rs
crates/import/tests/: integration_tests.rs
crates/indexers/: Cargo.toml  README.md
crates/indexers/examples/: hdbits_example.rs  search_example.rs
crates/indexers/src/: lib.rs  models.rs  multi_indexer.rs  prowlarr.rs  service_health.rs  tests.rs
crates/indexers/src/hdbits/: client.rs  mod.rs  models.rs  parser.rs  tests.rs
crates/infrastructure/: Cargo.toml  README.md
crates/infrastructure/src/: database.rs  error.rs  lib.rs
crates/infrastructure/src/cache/: memory.rs  mod.rs
crates/infrastructure/src/database/: pool.rs
crates/infrastructure/src/download_clients/: mod.rs  qbittorrent.rs
crates/infrastructure/src/lists/: common.rs  imdb.rs  mod.rs  tmdb.rs
crates/infrastructure/src/monitoring/: README.md  alert_manager.rs  health_checks.rs  list_sync_monitor.rs  metrics.rs  mod.rs
crates/infrastructure/src/repositories/: README.md  blocklist.rs  custom_formats.rs  download.rs  download_complex.rs.bak  indexer.rs  indexer_complex.rs.bak  list_sync.rs  list_sync_tests.rs  mod.rs  movie.rs  movie_complex.rs.bak  quality_profile.rs  quality_profile_complex.rs.bak  queue.rs  streaming_cache.rs
crates/infrastructure/src/streaming/: aggregator_factory.rs  mod.rs
crates/infrastructure/src/tmdb/: cached_client.rs  client.rs  mod.rs  streaming_client.rs  tests.rs
crates/infrastructure/src/trakt/: client.rs  mod.rs  oauth.rs
crates/infrastructure/src/watchmode/: client.rs  csv_sync.rs  mod.rs
crates/notifications/: Cargo.toml  README.md
crates/notifications/src/: lib.rs  models.rs  service.rs  templates.rs
crates/notifications/src/providers/: discord.rs  email.rs  mod.rs
(+334 files in other folders)
