[workspace]
members = [
    "crates/analysis",
    "crates/core", 
    "crates/api",
    "crates/infrastructure",
    "crates/indexers",
    "crates/decision",
    "crates/downloaders",
    "crates/import",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Date/Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5"

# Parsing and text processing
regex = "1.10"
scraper = "0.17"
nom = "7.1"

# Logging and CLI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
rand = "0.8"
md5 = "0.7"
html-escape = "0.2"
urlencoding = "2.1"
flate2 = "1.0"
which = "6.0"

proptest = "1.4"
mockall = "0.12"
tokio-test = "0.4"
serial_test = "3.0"

[workspace.dev-dependencies]

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP testing
axum-test = "15.0"
tower-test = "0.4"

# Test containers
testcontainers = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true