[package]
name = "radarr-mvp"
version = "1.0.0"
edition = "2021"
description = "Radarr MVP - Movie automation and management system"
authors = ["Radarr Team"]
license = "GPL-3.0"

[[bin]]
name = "radarr-mvp"
path = "src/main.rs"

[[bin]]
name = "test_hdbits_integration"
path = "test_hdbits_integration.rs"

[[bin]]
name = "test_integration_workflow"
path = "test_integration_workflow.rs"

[[bin]]
name = "trakt-auth"
path = "src/bin/trakt_auth.rs"


[dependencies]
# Internal crates
radarr-core = { path = "crates/core" }
radarr-infrastructure = { path = "crates/infrastructure" }
radarr-indexers = { path = "crates/indexers" }
radarr-downloaders = { path = "crates/downloaders" }
radarr-import = { path = "crates/import" }
radarr-api = { path = "crates/api" }
radarr-notifications = { path = "crates/notifications" }
radarr-decision = { path = "crates/decision" }

# External dependencies from workspace
tokio = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
axum-test = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.10"
md5 = { workspace = true }

[workspace]
members = [
    "crates/analysis",  # TEMPORARILY DISABLED - 30+ compilation errors
    "crates/core", 
    "crates/api",
    "crates/infrastructure",
    "crates/indexers",
    "crates/decision",
    "crates/downloaders",
    "crates/import", "crates/notifications",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "metrics", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate", "macros", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# Date/Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
url = "2.5"

# Parsing and text processing
regex = "1.10"
scraper = "0.17"
nom = "7.1"

# Logging and CLI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive", "env"] }

# OpenTelemetry and Observability Stack
opentelemetry = { version = "0.21", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "trace", "metrics"] }
opentelemetry-prometheus = "0.14"
tracing-opentelemetry = "0.22"
prometheus = "0.13"
metrics = "0.22"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
rand = "0.8"
md5 = "0.7"
html-escape = "0.2"
urlencoding = "2.1"
flate2 = "1.0"
which = "6.0"
rust_decimal = "1.33"

# Testing
proptest = "1.4"
mockall = "0.12"
tokio-test = "0.4"
serial_test = "3.0"
axum-test = "15.0"

[workspace.dev-dependencies]

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP testing
axum-test = "15.0"
tower-test = "0.4"

# Test containers
testcontainers = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
