[package]
name = "radarr-analysis"
version = "0.1.0"
edition = "2021"
description = "HDBits scene group analysis and reputation scoring system"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
md5 = { workspace = true }
html-escape = { workspace = true }
urlencoding = { workspace = true }

# Internal crates
radarr-indexers = { path = "../indexers" }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[[bin]]
name = "hdbits-analyzer"
path = "src/bin/hdbits_analyzer.rs"

[[bin]]
name = "hdbits-browse-analyzer"
path = "src/bin/hdbits_browse_analyzer.rs"

[[bin]]
name = "hdbits-session-analyzer"
path = "src/bin/hdbits_session_analyzer.rs"

[[bin]]
name = "hdbits-comprehensive-analyzer"
path = "src/bin/hdbits_comprehensive_analyzer.rs"

[[bin]]
name = "hdbits-api-analyzer"
path = "src/bin/hdbits_api_analyzer.rs"