[package]
name = "radarr-core"
version = "0.1.0"
edition = "2021"
description = "Core domain models and business logic for Radarr"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }