[package]
name = "radarr-downloaders"
version = "0.1.0"
edition = "2021"

[dependencies]
radarr-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
md5.workspace = true
tracing-subscriber = { workspace = true }
