[package]
name = "radarr-import"
version = "0.1.0"
edition = "2021"

[dependencies]
radarr-core = { path = "../core" }
tokio = { workspace = true, features = ["fs", "process"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"
