[package]
name = "radarr-indexers"
version = "0.1.0"
edition = "2021"

[dependencies]
radarr-core = { path = "../core" }
tokio = { workspace = true, features = ["time"] }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = { workspace = true }
