[package]
name = "radarr-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
radarr-core = { path = "../core", features = ["postgres"] }
radarr-downloaders = { path = "../downloaders" }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
