[package]
name = "radarr-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
radarr-core = { path = "../core", features = ["postgres"] }
radarr-downloaders = { path = "../downloaders" }
radarr-decision = { path = "../decision" }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
csv = "1.3"
scraper = "0.18"
regex = { workspace = true }
